# slotPaste

./: .gitignore  Cargo.toml  README.md
apps/clip-ui/: README.md  index.html  package-lock.json  package.json
apps/clip-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/clip-ui/src-tauri/src/: lib.rs  main.rs
crates/clip/: Cargo.toml
crates/clip-agent/: Cargo.toml
crates/clip-agent/src/: keys.rs  main.rs  state_machine.rs
crates/clip-agent/src/ipc/: mod.rs  udp.rs
crates/clip-agent/src/macos/: clipboard.rs  event_tap.rs  mod.rs  paste.rs
crates/clip-agent/src/persistence/: mod.rs  sqlite.rs
crates/clip/src/: main.rs
crates/clip/src/doctor/: accessibility.rs  mod.rs
