[package]
name = "clip-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clip-agent"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.4"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
foreign-types = "0.5"
macos-accessibility-client = "0.0.2"
clipboard = "0.5"
