[package]
name = "clip"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6.0"
ctrlc = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.2"
